--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Dream car</title>
 </head>
-
 <body>
     <header id="header">
         <div class="logo">
